--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@electron/remote": "^1.2.1",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "concurrently": "^6.2.0",
+    "dymojs": "^1.2.0",
     "electron": "^13.1.7",
+    "fast-xml-parser": "^3.19.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -21,6 +25,51 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-react": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\""
+  },
+  "build": {
+    "productName": "LabelPrinter",
+    "appId": "com.seaonics.einaraglen",
+    "directories": {
+      "output": "build"
+    },
+    "files": [
+      "dist/electron/**/*"
+    ],
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "mac": {
+      "icon": "build/icons/icon.icns",
+      "category": "public.app-category.printing",
+      "fileAssociations": [
+        {
+          "ext": [
+            "xml",
+            "XML"
+          ],
+          "description": "Image files",
+          "role": "Viewer"
+        }
+      ]
+    },
+    "win": {
+      "icon": "build/icons/icon.ico"
+    },
+    "linux": {
+      "icon": "build/icons"
+    }
   },
   "eslintConfig": {
     "extends": [
