--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
         "wait-on": "^6.0.0",
-        "web-vitals": "^1.0.1"
+        "web-vitals": "^1.0.1",
+        "yarn": "^1.22.11"
     },
     "main": "public/electron.js",
     "homepage": "./",
