--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "dependencies": {
         "@electron/remote": "^1.2.1",
         "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "concurrently": "^6.2.0",
         "dymojs": "^1.2.0",
         "electron-is-dev": "^2.0.0",
+        "electron-store": "^8.0.0",
         "fast-xml-parser": "^3.19.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
