--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "fast-xml-parser": "^3.19.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^1.1.5",
         "wait-on": "^6.0.0",
         "web-vitals": "^1.0.1",
         "yarn": "^1.22.11"
@@ -43,7 +43,6 @@
     "browserslist": {
         "production": [
             ">0.2%",
-            "not dead",
             "not op_mini all"
         ],
         "development": [
