--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "label-printer",
-    "version": "0.1.5",
+    "version": "0.1.6",
     "private": true,
     "dependencies": {
         "@electron/remote": "^1.2.1",
@@ -9,6 +9,7 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "bootstrap": "^5.1.0",
         "concurrently": "^6.2.0",
         "dymojs": "^1.2.0",
         "electron-is-dev": "^2.0.0",
@@ -16,7 +17,9 @@
         "fast-xml-parser": "^3.19.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.3",
+        "reactstrap": "^8.9.0",
         "wait-on": "^6.0.0",
         "web-vitals": "^1.0.1",
         "yarn": "^1.22.11"
