--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "@testing-library/user-event": "^12.1.10",
         "bootstrap": "^5.1.0",
         "concurrently": "^6.2.0",
+        "core-js": "^2.5.7",
         "dymojs": "^1.2.0",
         "electron-is-dev": "^2.0.0",
         "electron-store": "^8.0.0",
         "fast-xml-parser": "^3.19.0",
+        "material-auto-rotating-carousel": "^3.0.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
