--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "concurrently": "^6.2.0",
         "core-js": "^2.5.7",
         "dymojs": "^1.2.0",
+        "electron-builder": "^22.11.7",
         "electron-is-dev": "^2.0.0",
         "electron-store": "^8.0.0",
         "fast-xml-parser": "^3.19.0",
