--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "LabelPrinter",
     "description": "Printing Plug-In for IFS",
-    "author": "Einar Andreas Aglen",
-    "version": "0.3.0",
+    "author": "Einar A. Aglen",
+    "version": "0.3.1",
     "private": true,
     "dependencies": {
         "@electron/remote": "^1.2.1",
@@ -12,6 +12,7 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "bootstrap": "^5.1.0",
+        "builder": "^5.0.0",
         "concurrently": "^6.2.0",
         "core-js": "^2.5.7",
         "dymojs": "^1.2.0",
@@ -20,6 +21,7 @@
         "fast-xml-parser": "^3.19.0",
         "material-auto-rotating-carousel": "^3.0.2",
         "react": "^17.0.2",
+        "react-collapse": "^5.1.0",
         "react-dom": "^17.0.2",
         "react-material-ui-carousel": "^2.2.7",
         "react-router-dom": "^5.2.0",
@@ -61,6 +63,6 @@
         ]
     },
     "devDependencies": {
-        "electron": "^13.1.7"
+        "electron": "^13.2.1"
     }
 }
