--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -1,14 +1,13 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
-      "sourceMap": true,
-      "strict": true,
-      "outDir": "../build", // Output transpiled files to build/electron/
-      "rootDir": "../",
-      "noEmitOnError": true,
-      "typeRoots": [
-        "node_modules/@types"
-      ]
-    }
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "target": "es5",
+    "module": "commonjs",
+    "sourceMap": true,
+    "strict": true,
+    "outDir": "../build", // Output transpiled files to build/electron/
+    "rootDir": "../",
+    "noEmitOnError": true,
+    "typeRoots": ["node_modules/@types"]
   }
+}
