--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "label-printer",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "author": "Einar A. Aglen",
   "private": true,
   "homepage": ".",
@@ -28,6 +28,7 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
     "dymojs": "^1.2.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
