--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
       "build/**/*",
       "./public/**/*"
     ],
-    "directories": { "output": "release/" }
+    "directories": {
+      "output": "release/"
+    }
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@firebase/app-types": "^0.7.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@reduxjs/toolkit": "^1.7.2",
@@ -30,6 +33,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/electron-devtools-installer": "^2.2.1",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
@@ -41,10 +45,12 @@
     "electron-reload": "^2.0.0-alpha.1",
     "electron-store": "^8.0.1",
     "fast-xml-parser": "^4.0.2",
+    "firebase": "^9.6.7",
     "history": "^5.2.0",
     "http-codes": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-material-ui-carousel": "^3.1.1",
     "react-redux": "^7.2.6",
