--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.9",
+    "@types/react-icons": "^3.0.0",
     "@vitejs/plugin-react": "^1.2.0",
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "vite": "^2.8.6"
+    "react-icons": "^4.7.1",
+    "vite": "^2.8.6",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.22",
