--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "@headlessui/react": "^1.7.9",
     "@types/react-icons": "^3.0.0",
     "@vitejs/plugin-react": "^1.2.0",
+    "axios": "^1.3.2",
     "electron-is-dev": "^2.0.0",
+    "fast-xml-parser": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.0",
     "vite": "^2.8.6",
     "zustand": "^4.3.2"
   },
