--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -20,5 +20,5 @@
       "outDir": "../main"
     },
     "exclude": ["node_modules"],
-    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "../src/api/dymo.ts"]
+    "include": ["**/*.ts", "**/*.tsx", "**/*.js"]
   }
