--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "vite": "^2.8.6",
-    "zustand": "^4.3.2"
+    "zustand": "^4.3.2",
+    "zuzel-printer": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.22",
