--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "axios": "^1.3.2",
     "electron-is-dev": "^2.0.0",
     "fast-xml-parser": "^4.1.1",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "vite": "^2.8.6",
-    "zustand": "^4.3.2",
-    "zuzel-printer": "^1.0.4"
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.22",
