--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-react": "^1.2.0",
     "axios": "^1.3.2",
     "electron-is-dev": "^2.0.0",
+    "electron-store": "^8.1.0",
     "fast-csv": "^4.3.6",
     "fast-xml-parser": "^4.1.1",
     "framer-motion": "^6.5.1",
