--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
+    "uuid": "^9.0.0",
     "vite": "^2.8.6",
     "zustand": "^4.3.2"
   },
@@ -44,6 +45,7 @@
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
     "autoprefixer": "^10.4.4",
